--- a/daili.yaml
+++ b/daili.yaml
@@ -47,7 +47,7 @@ proxies:
   average: 71.8
   UpdateDay: '2022-06-15T06:30:24.654235'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 42919
+  Rank: 43019
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
   port: 30003
@@ -61,7 +61,7 @@ proxies:
   average: 9.17
   UpdateDay: '2022-06-12T12:31:23.267626'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 42593
+  Rank: 42443
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -76,7 +76,7 @@ proxies:
   average: 220.62
   UpdateDay: '2022-06-15T06:31:05.989903'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 39960
+  Rank: 40055
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -90,7 +90,7 @@ proxies:
   average: 624.84
   UpdateDay: '2022-06-10T15:30:56.789059'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 37074
+  Rank: 36924
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -105,7 +105,7 @@ proxies:
   average: 54.73
   UpdateDay: '2022-06-15T06:31:05.201159'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 33792
+  Rank: 33892
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   type: trojan
@@ -120,7 +120,7 @@ proxies:
   average: 60.65
   UpdateDay: '2022-06-15T06:30:24.677303'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 31427
+  Rank: 31527
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -135,7 +135,7 @@ proxies:
   average: 47.29
   UpdateDay: '2022-06-15T06:31:07.070030'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 30435
+  Rank: 30535
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -147,7 +147,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 29331
+  Rank: 29431
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -162,7 +162,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 29010
+  Rank: 29110
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -177,7 +177,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 28648
+  Rank: 28698
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -189,7 +189,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 28072
+  Rank: 28122
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   type: trojan
@@ -204,7 +204,7 @@ proxies:
   average: 71.45
   UpdateDay: '2022-06-15T06:30:24.626944'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 22590
+  Rank: 22640
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
@@ -219,20 +219,7 @@ proxies:
   average: 41.21
   UpdateDay: '2022-06-15T06:31:04.960560'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 21265
-- name: fkgfw-prod.i.sxl.cn:443@ss
-  server: fkgfw-prod.i.sxl.cn
-  port: 443
-  type: ss
-  cipher: aes-256-cfb
-  password: E4DNMf73kHPrd8Qq7aqGPf7f
-  success_rate: 100.0
-  minimum: 6.43
-  maximum: 254.08
-  average: 89.1
-  UpdateDay: '2022-03-24T18:35:12.668742'
-  PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 18182
+  Rank: 21345
 - name: hk31.ssgnode.ga:443@trojan
   server: hk31.ssgnode.ga
   type: trojan
@@ -247,7 +234,20 @@ proxies:
   average: 65.35
   UpdateDay: '2022-06-15T06:30:24.533205'
   PFirstFoundDay: '2022-03-13T18:24:14.435896'
-  Rank: 17965
+  Rank: 18065
+- name: fkgfw-prod.i.sxl.cn:443@ss
+  server: fkgfw-prod.i.sxl.cn
+  port: 443
+  type: ss
+  cipher: aes-256-cfb
+  password: E4DNMf73kHPrd8Qq7aqGPf7f
+  success_rate: 100.0
+  minimum: 6.43
+  maximum: 254.08
+  average: 89.1
+  UpdateDay: '2022-03-24T18:35:12.668742'
+  PFirstFoundDay: '2022-03-19T12:33:06.851449'
+  Rank: 18032
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -262,7 +262,7 @@ proxies:
   average: 23.81
   UpdateDay: '2022-05-12T15:30:29.234708'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 17133
+  Rank: 16983
 - name: api.tcpbbr.net:443@trojan
   server: api.tcpbbr.net
   port: 443
@@ -277,7 +277,7 @@ proxies:
   average: 39.45
   UpdateDay: '2022-06-15T06:31:04.947061'
   PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 16856
+  Rank: 16915
 - name: v.9051246.xyz:443@trojan
   server: v.9051246.xyz
   port: 443
@@ -292,7 +292,7 @@ proxies:
   average: 180.81
   UpdateDay: '2022-06-15T06:31:07.519691'
   PFirstFoundDay: '2022-03-12T03:12:46.740408'
-  Rank: 16577
+  Rank: 16625
 - name: api.mjj-home.com:443@trojan
   server: api.mjj-home.com
   port: 443
@@ -307,20 +307,22 @@ proxies:
   average: 144.35
   UpdateDay: '2022-06-15T06:31:07.483135'
   PFirstFoundDay: '2022-03-12T03:14:59.624344'
-  Rank: 15788
-- name: 101.91.121.247:50004@ss
-  type: ss
-  server: 101.91.121.247
-  port: 50004
-  cipher: aes-256-cfb
-  password: '4415934295'
+  Rank: 15838
+- name: www.nyc3000.ga:443@trojan
+  server: www.nyc3000.ga
+  type: trojan
+  country: "\U0001F1EC\U0001F1E7 GB"
+  port: 443
+  password: 10fd99c2-c26d-42e2-b73c-601ed051e5f3
+  skip-cert-verify: true
+  udp: true
   success_rate: 100.0
-  minimum: 10.43
-  maximum: 11.12
-  average: 10.83
-  UpdateDay: '2022-05-10T15:30:34.077769'
-  PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 15493
+  minimum: 140.34
+  maximum: 151.94
+  average: 144.58
+  UpdateDay: '2022-03-22T06:32:56.744843'
+  PFirstFoundDay: '2022-03-14T10:26:21.691651'
+  Rank: 15462
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -341,13 +343,13 @@ proxy-groups:
   - www.ggchk.ga:443@trojan
   - jp-tyo-04-tr.cdn.savoy.click:889@trojan
   - ssl.tcpbbr.net:443@trojan
-  - fkgfw-prod.i.sxl.cn:443@ss
   - hk31.ssgnode.ga:443@trojan
+  - fkgfw-prod.i.sxl.cn:443@ss
   - hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   - api.tcpbbr.net:443@trojan
   - v.9051246.xyz:443@trojan
   - api.mjj-home.com:443@trojan
-  - 101.91.121.247:50004@ss
+  - www.nyc3000.ga:443@trojan
   tolerance: 250
 rule-providers:
   anting:
