--- a/daili2.yaml
+++ b/daili2.yaml
@@ -35,19 +35,19 @@ dns:
 proxies:
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 21089
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 30.89
-  maximum: 53.49
-  average: 42.28
-  UpdateDay: '2022-06-15T12:30:28.562911'
+  minimum: 39.68
+  maximum: 46.24
+  average: 42.56
+  UpdateDay: '2022-06-15T15:38:47.450055'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 43581
+  Rank: 43682
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
   port: 30003
@@ -61,7 +61,7 @@ proxies:
   average: 9.17
   UpdateDay: '2022-06-12T12:31:23.267626'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 41543
+  Rank: 41393
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -71,12 +71,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 86.55
-  maximum: 109.43
-  average: 95.58
-  UpdateDay: '2022-06-15T12:31:11.230266'
+  minimum: 60.67
+  maximum: 104.17
+  average: 77.98
+  UpdateDay: '2022-06-15T15:38:47.578325'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 40391
+  Rank: 40452
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -90,7 +90,7 @@ proxies:
   average: 624.84
   UpdateDay: '2022-06-10T15:30:56.789059'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 36024
+  Rank: 35874
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -100,42 +100,42 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 51.54
-  maximum: 73.17
-  average: 65.26
-  UpdateDay: '2022-06-15T12:31:11.108845'
+  minimum: 57.12
+  maximum: 61.59
+  average: 59.54
+  UpdateDay: '2022-06-15T15:38:47.503583'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 34342
+  Rank: 34403
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
-  type: trojan
-  country: "\U0001F1ED\U0001F1F0HK"
   port: 443
+  type: trojan
+  country: "\U0001F1ED\U0001F1F0 HK"
   password: L1qNeGrY58ApwrRA
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 42.19
-  maximum: 49.86
-  average: 46.2
-  UpdateDay: '2022-06-15T12:30:28.534620'
+  minimum: 41.13
+  maximum: 49.49
+  average: 46.09
+  UpdateDay: '2022-06-15T15:38:47.450647'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 32129
+  Rank: 32205
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
-  type: trojan
-  country: "\U0001F1FA\U0001F1F8US"
   port: 443
+  type: trojan
+  country: "\U0001F1FA\U0001F1F8 US"
   password: 4f7dc540-d244-4e64-af21-4b5bb300add3
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 45.15
-  maximum: 46.49
-  average: 45.76
-  UpdateDay: '2022-06-15T12:30:51.214983'
+  minimum: 37.79
+  maximum: 50.17
+  average: 44.44
+  UpdateDay: '2022-06-15T15:38:48.586918'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 31138
+  Rank: 31239
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -147,7 +147,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 30031
+  Rank: 30131
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -162,7 +162,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 29710
+  Rank: 29810
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -177,7 +177,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 28998
+  Rank: 29048
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -189,37 +189,38 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 28422
+  Rank: 28472
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 889
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: UiLPqefVfielqkDjEwBV
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.44
-  maximum: 48.52
-  average: 43.23
-  UpdateDay: '2022-06-15T12:30:28.543964'
+  minimum: 38.53
+  maximum: 48.12
+  average: 42.33
+  UpdateDay: '2022-06-15T15:38:47.487656'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 22933
-- name: ssl.tcpbbr.net:443@trojan
-  server: ssl.tcpbbr.net
+  Rank: 22980
+- country: "mattkaydiary.com|\u4E2D\u56FD\u9999\u6E2F\u7279\u522B\u884C\u653F\u533A\
+    (HK)Hongkong+SAR+China/Hong+Kong_42"
+  name: ssl.tcpbbr.net:443@trojan
+  password: 7b4066ae-accc-11eb-a8bf-f23c91cfbbc9
   port: 443
-  type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
-  password: 08d178d4-ec8b-11eb-a8bf-f23c91cfbbc9
+  server: ssl.tcpbbr.net
   skip-cert-verify: true
+  type: trojan
   udp: true
   success_rate: 100.0
-  minimum: 82.36
-  maximum: 85.1
-  average: 83.73
-  UpdateDay: '2022-06-15T12:31:11.160329'
+  minimum: 52.77
+  maximum: 100.87
+  average: 72.21
+  UpdateDay: '2022-06-15T15:38:47.481963'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 21742
+  Rank: 21812
 - name: hk31.ssgnode.ga:443@trojan
   server: hk31.ssgnode.ga
   port: 443
@@ -229,12 +230,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 36.35
-  maximum: 43.14
-  average: 38.75
-  UpdateDay: '2022-06-15T12:31:10.898310'
+  minimum: 38.99
+  maximum: 46.64
+  average: 43.78
+  UpdateDay: '2022-06-15T15:38:47.391712'
   PFirstFoundDay: '2022-03-13T18:24:14.435896'
-  Rank: 18544
+  Rank: 18620
+- name: api.tcpbbr.net:443@trojan
+  server: api.tcpbbr.net
+  port: 443
+  type: trojan
+  country: "\U0001F1ED\U0001F1F0 HK"
+  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
+  skip-cert-verify: true
+  udp: true
+  success_rate: 100.0
+  minimum: 40.1
+  maximum: 1041.72
+  average: 378.92
+  UpdateDay: '2022-06-15T15:38:48.387174'
+  PFirstFoundDay: '2022-03-29T09:34:31.613124'
+  Rank: 17084
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -247,22 +263,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 17132
-- name: api.tcpbbr.net:443@trojan
-  server: api.tcpbbr.net
-  type: trojan
-  country: "\U0001F1ED\U0001F1F0HK"
-  port: 443
-  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
-  skip-cert-verify: true
-  udp: true
-  success_rate: 100.0
-  minimum: 38.52
-  maximum: 2056.02
-  average: 1047.27
-  UpdateDay: '2022-06-15T12:30:31.439900'
-  PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 17054
+  Rank: 16982
 - name: v.9051246.xyz:443@trojan
   server: v.9051246.xyz
   port: 443
@@ -272,12 +273,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 191.7
-  maximum: 210.29
-  average: 198.26
-  UpdateDay: '2022-06-15T12:31:12.238365'
+  minimum: 185.48
+  maximum: 207.12
+  average: 196.07
+  UpdateDay: '2022-06-15T15:38:50.902813'
   PFirstFoundDay: '2022-03-12T03:12:46.740408'
-  Rank: 16925
+  Rank: 16974
 - name: api.mjj-home.com:443@trojan
   server: api.mjj-home.com
   port: 443
@@ -287,12 +288,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 148.26
-  maximum: 156.41
-  average: 151.49
-  UpdateDay: '2022-06-15T12:31:12.156596'
+  minimum: 150.0
+  maximum: 157.69
+  average: 154.7
+  UpdateDay: '2022-06-15T15:38:51.018311'
   PFirstFoundDay: '2022-03-12T03:14:59.624344'
-  Rank: 16142
+  Rank: 16193
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -307,7 +308,7 @@ proxies:
   average: 23.81
   UpdateDay: '2022-05-12T15:30:29.234708'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 16083
+  Rank: 15933
 - name: www.nyc3000.ga:443@trojan
   server: www.nyc3000.ga
   type: trojan
@@ -322,7 +323,7 @@ proxies:
   average: 144.58
   UpdateDay: '2022-03-22T06:32:56.744843'
   PFirstFoundDay: '2022-03-14T10:26:21.691651'
-  Rank: 15762
+  Rank: 15812
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -344,8 +345,8 @@ proxy-groups:
   - jp-tyo-04-tr.cdn.savoy.click:889@trojan
   - ssl.tcpbbr.net:443@trojan
   - hk31.ssgnode.ga:443@trojan
-  - fkgfw-prod.i.sxl.cn:443@ss
   - api.tcpbbr.net:443@trojan
+  - fkgfw-prod.i.sxl.cn:443@ss
   - v.9051246.xyz:443@trojan
   - api.mjj-home.com:443@trojan
   - hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
